# lorawan-chatbot-rag-llm

./: .gitignore  01_data_articles_collection.ipynb  02_data_faq_collection.ipynb  03_rag_lorawan.ipynb  README.md  requirements.txt
app/backend/: pyproject.toml
app/backend/data/: 1-what-is-lorawan.md  11-limitations.md  13-frequency-plans.md  17-addressing.md  18-academic.md  19-antenna-connectors.md  2-architecture.md  22-eirp-and-erp.md  28-preparing-certification.md  29-regional-limitations-of-rf-use.md  4-lorawan-relay.md  7-classes.md  9-spreading-factors.md
app/frontend/: Dockerfile  package-lock.json  package.json
app/frontend/app/: globals.css
app/frontend/app/components/: header.tsx
app/frontend/app/components/ui/chat/: chat-input.tsx
app/frontend/app/components/ui/chat/chat-message/: chat-avatar.tsx
data/: lorawan-information.md
data/articles/: 10-adaptive-data-rate.md  12-frequencies-by-country.md  14-duty-cycle.md  15-glossary.md  16-modulation-data-rate.md  20-antenna-types.md  21-db-dbm-dbi-dbd.md  23-fec-and-code-rate.md  24-lora-phy-format.md  25-concentrators.md  26-transceivers.md  27-prefix-assignments.md  3-regional-parameters.md  30-rssi-and-snr.md  31-the-things-certified-security.md  5-message-types.md  6-security.md  8-end-device-activation.md
data/faq/: faq.csv  faq.json  faq_cleaned.csv  faq_deduped.tsv  fq.json  qa-embeddings.tsv  qa-test.tsv  qa-train.tsv
hugging_face/: main.py
notebooks/: 01_data_articles_collection.ipynb  03_rag_lorawan.ipynb  04_clean_faq_data_lorawan_rag.ipynb  05_evaluate_lorawan_rag_deepval.ipynb
