[tool]
[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = [ "Jorge A Chavez" ]
readme = "README.md"

[tool.poetry.scripts]
generate = "app.engine.generate:generate_datasource"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
fastapi = "^0.109.1"
python-dotenv = "^1.0.0"
aiostream = "^0.5.2"
llama-index = "0.10.59"
cachetools = "^5.3.3"

[tool.poetry.dependencies.uvicorn]
extras = [ "standard" ]
version = "^0.23.2"

[tool.poetry.dependencies.llama-index-vector-stores-pinecone]
version = "^0.1.9"

[tool.poetry.dependencies.docx2txt]
version = "^0.8"

[tool.poetry.dependencies.llama-index-llms-gemini]
version = "0.1.11"

[tool.poetry.dependencies.llama-index-embeddings-gemini]
version = "0.1.8"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"